--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.56.1",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
